fix: open modules for reflective access during testing see https://github.com/stefanbirkner/system-lambda/issues/23\#issuecomment-1007608124
Signed-off-by: Jeremy Long <jeremy.long@gmail.com>